# surface_reconstruct

./: CMakeCache.txt  CMakeLists.txt  IWGL Tile 2(1)5b50239e70b54d2777b38aebdcddf2f496996829dfe3211910292789acc73dd5.fbx  IWGL_tile.ply  Makefile  bunny.vtk  cgal_pcl_interface.cpp  cmake_install.cmake  don.pcd  don_cluster_0.pcd  don_filtered.pcd  grid_projection_surface.cpp  min_cut.cpp  octree_leafnode.cpp  region_DON.cpp  region_growing.cpp  region_growing_cube.cpp  region_growing_cylinder_seg.cpp  script_all.sh  script_mincut.sh  script_octree.sh  script_region_growing.sh  segmentation_DON  surface_reconstruction  table_scene_mug_stereo_textured_cylinder.pcd  tile.ply  tile_new.ply  tile_surface.ply
polygon_based/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.bak  CMakeLists_ol.txt  IWGL_tile.pcd  Makefile  cgal_pcl_interface  cgal_pcl_interface.cpp  cmake_install.cmake  polyfit_example_without_input_planes.cpp  surface_reconstruction_polygonal  surface_reconstruction_polygonal.cpp  tile.pwn
polygon_based/data/: tile_candidate_faces.off  tile_result.off
